# LR_NP

./: .gitignore  CMakeLists.txt  NP  NP.cpp  NP.h  README.md  a.txt  b.txt  result.json  unit_tests  unit_tests.cpp
tests/: np_tests.cpp
